<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.example.chatapplication.model.RootViewModel" />
    </data>

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/create_new_account"
                android:textSize="30sp"
                android:fontFamily="@font/alatsi"
                android:textColor="#3560ff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_marginStart="10dp"
                android:src="@drawable/fire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/acme"
            android:text="@string/please_fill_in_the_forms_continue"
            android:textSize="16sp" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/edit_email_sign_up"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconCheckable="true"
            app:startIconTint="@color/black"
            app:boxStrokeColor="#3560ff"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeErrorColor="#F44336"
            android:hint="@string/email"
            app:hintTextColor="#3560ff"
            android:layout_width="match_parent"
            app:hintAnimationEnabled="true"
            app:endIconDrawable="@drawable/ic_baseline_close_24"
            app:endIconCheckable="true"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={user.emailSignUp}"
                android:id="@+id/text_edit_email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/edit_full_name_sign_up"
            app:startIconDrawable="@drawable/ic_baseline_person_pin_24"
            app:startIconCheckable="true"
            app:startIconTint="@color/black"
            app:boxStrokeColor="#3560ff"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeErrorColor="#F44336"
            android:hint="@string/full_name"
            app:hintTextAppearance="@style/InputText"
            app:hintTextColor="#3560ff"
            android:layout_width="match_parent"
            app:hintAnimationEnabled="true"
            app:endIconDrawable="@drawable/ic_baseline_close_24"
            app:endIconCheckable="true"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_fullName_sign_up"
                android:text="@={user.nameSignUp}"
                android:background="@drawable/bg_input"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:hintTextColor="#3560ff"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/edit_password_sing_up"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:counterMaxLength="6"

            app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
            android:hint="@string/password"
            android:layout_width="match_parent"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={user.passwordSignUp}"
                android:id="@+id/text_edit_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.card.MaterialCardView
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:onClick="@{() -> user.onClickSignUp()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3560ff"
                android:text="@string/sign_up"
                android:textColor="@color/white" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>