<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:lottie_rawRes="@raw/welcome"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="500dp">
                <com.google.android.material.card.MaterialCardView
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.tabs.TabLayout
                        app:tabMode="fixed"
                        app:tabIndicatorGravity="stretch"
                        app:tabIndicatorColor="@color/white"
                        app:tabIndicator="@drawable/bg_tab_layout"
                        app:tabIndicatorAnimationMode="elastic"
                        app:tabTextColor="@color/black"
                        android:id="@+id/tab_layout_root"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:background="@drawable/bg_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.tabs.TabItem
                            android:text="@string/signin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <com.google.android.material.tabs.TabItem
                            android:text="@string/sign_up"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.tabs.TabLayout>
                </com.google.android.material.card.MaterialCardView>
                <androidx.viewpager2.widget.ViewPager2
                    android:layout_marginTop="20dp"
                    android:id="@+id/view_pager_2_root"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:text="@string/we_happy_to_see_you_again_to_see_your_account_you_should_login_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/sign_in_with_google_or_facebook"
                android:textAlignment="center"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_facebook"
                    app:cardCornerRadius="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:background="@drawable/bg_btn_gg_fb"
                        android:padding="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/facebook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_marginStart="10dp"
                            android:textSize="16sp"
                            android:text="@string/facebook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_marginStart="20dp"
                    android:id="@+id/btn_google"
                    app:cardCornerRadius="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:background="@drawable/bg_btn_gg_fb"
                        android:padding="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/search"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/alatsi"
                            android:text="@string/google"
                            android:textSize="16sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/alatsi"
                    android:textSize="16sp"
                    android:text="Don't have account?"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/btn_show_sign_up"
                    android:textStyle="italic"
                    android:textAllCaps="false"
                    android:textColor="#647fda"
                    android:text="Sign Up"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>