<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_close_edit_profile"
        android:layout_margin="@dimen/_20sdp"
        app:fabSize="mini"
        android:background="@color/white"
        app:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_close_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:visibility="gone"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="50dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edit_email_profile"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconCheckable="true"
        app:startIconTint="@color/black"
        app:boxStrokeColor="#3560ff"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeErrorColor="#F44336"
        android:hint="@string/email"
        app:hintTextColor="#3560ff"
        android:layout_width="match_parent"
        app:hintAnimationEnabled="true"
        app:endIconDrawable="@drawable/ic_baseline_close_24"
        app:endIconCheckable="true"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_email_profile"
            android:background="@drawable/bg_input"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:visibility="gone"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:hintTextColor="#3560ff"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edit_password_profile"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:counterMaxLength="6"
        android:layout_marginTop="50dp"
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
        android:hint="@string/password"
        android:layout_width="match_parent"
        app:hintAnimationEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_password_profile"
            android:background="@drawable/bg_input"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:visibility="gone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edit_full_name_profile"
        app:startIconDrawable="@drawable/ic_baseline_person_pin_24"
        app:startIconCheckable="true"
        app:startIconTint="@color/black"
        app:boxStrokeColor="#3560ff"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeErrorColor="#F44336"
        android:hint="@string/full_name"
        android:layout_marginTop="50dp"
        app:hintTextAppearance="@style/InputText"
        app:hintTextColor="#3560ff"
        android:layout_width="match_parent"
        app:hintAnimationEnabled="true"
        app:endIconDrawable="@drawable/ic_baseline_close_24"
        app:endIconCheckable="true"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_fullName_profile"
            android:background="@drawable/bg_input"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/aclonica"
        android:text="@string/save"
        android:background="@drawable/bg_btn_bottom_sheet_upload_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>